<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Заголовок -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/mainlogo" />

        <!-- Поле для email -->
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:background="@drawable/input_background"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:textColorHint="#8B8F91" />

        <!-- Поле для пароля -->
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/input_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#8B8F91" />

        <!-- Кнопка "Войти" -->
        <TextView
            android:id="@+id/dontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="@color/btn_color"
            android:textColor="@color/white"
            android:layout_marginTop="24dp" />



        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
