<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <!-- Фоновая картинка -->
    <ImageView
        android:id="@+id/welcomeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/welcome"
        android:scaleType="centerCrop" />

    <!-- Полупрозрачный затемняющий слой -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" /> <!-- Черный цвет с 50% прозрачностью -->

    <!-- Основной контент -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Логотип -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/mainlogo"
            android:layout_marginBottom="32dp" />

        <!-- Кнопка регистрации -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/btn_color"
            android:textColor="@color/white"
            android:layout_marginTop="24dp" />

        <!-- Кнопка входа -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@android:color/transparent"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>
